// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress should normalize percent to 0 when prop is < 0 1`] = `
<div
  className="progress hidden fixed"
  id="my-progress"
>
  <div
    className="progress-percent"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`Progress should normalize percent to 100 when prop is > 100 1`] = `
<div
  className="progress fixed"
  id="my-progress"
>
  <div
    className="progress-percent"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Progress should render a contained progress 1`] = `
<div
  className="progress"
  id="my-progress"
>
  <div
    className="progress-percent"
    style={
      Object {
        "width": "60%",
      }
    }
  />
</div>
`;

exports[`Progress should render an infinite progress with tooltip 1`] = `
<div
  className="progress fixed infinite"
  id="my-progress"
>
  <div
    className="progress-percent"
    onFocus={[Function]}
    onMouseOver={[Function]}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="infinite-indicator"
    />
  </div>
</div>
`;

exports[`Progress should render hidden progress at 0% 1`] = `
<div
  className="progress hidden fixed"
  id="my-progress"
>
  <div
    className="progress-percent"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`Progress should render progress with given percentage 1`] = `
<div
  className="progress fixed"
  id="my-progress"
>
  <div
    className="progress-percent"
    style={
      Object {
        "width": "60%",
      }
    }
  />
</div>
`;

exports[`Progress should render progress with tooltip 1`] = `
<div
  className="progress fixed"
  id="my-progress"
>
  <div
    className="progress-percent"
    onFocus={[Function]}
    onMouseOver={[Function]}
    style={
      Object {
        "width": "60%",
      }
    }
  />
</div>
`;
